--- a/css/styles.css
+++ b/css/styles.css
@@ -8,12 +8,9 @@ nav {
 
 /*}*/
 
-.form-check-input {
-    background-color: blue;
-    height: 100px;
-    width: 150px;
-}
 
-.form-check-input.pressed {
-    background-color: red;
+#small-size,
+#large-size,
+#family-size {
+    display: none;
 }
